Add hgdn.h as dependency in Makefile, make "all" target be the default

--- a/gdnative/Makefile
+++ b/gdnative/Makefile
@@ -7,6 +7,8 @@ else
 	CFLAGS += -O3
 endif
 
+all: windows64 windows32 linux64 linux32 wasm32
+
 # Cross compilers for windows targets if not running windows
 # TODO: test/fix when running on windows
 ifneq ($(OS),Windows_NT)
@@ -16,19 +18,19 @@ endif
 # Emscripten compiler for WebAssembly (WASM) libraries
 %.wasm: CC := emcc
 
-example_windows64.dll: example.c
+example_windows64.dll: example.c high-level-gdnative/hgdn.h
 	$(CC) $< -o $@ $(CFLAGS) -shared
 
-example_windows32.dll: example.c
+example_windows32.dll: example.c high-level-gdnative/hgdn.h
 	$(CC) $< -o $@ $(CFLAGS) -shared -m32
 
-example_linux64.so: example.c
+example_linux64.so: example.c high-level-gdnative/hgdn.h
 	$(CC) $< -o $@ $(CFLAGS) -shared -fPIC
 
-example_linux32.so: example.c
+example_linux32.so: example.c high-level-gdnative/hgdn.h
 	$(CC) $< -o $@ $(CFLAGS) -shared -fPIC -m32 
 
-example_wasm32.wasm: example.c
+example_wasm32.wasm: example.c high-level-gdnative/hgdn.h
 	$(CC) $< -o $@ $(CFLAGS) -s SIDE_MODULE=1
 
 windows32: example_windows32.dll
@@ -36,8 +38,6 @@ windows64: example_windows64.dll
 linux32: example_linux32.so
 linux64: example_linux64.so
 wasm32: example_wasm32.wasm
-
-all: windows64 windows32 linux64 linux32 wasm32
 
 .PHONY: clean
 clean:
